- added support for NIS users
- added wrapper for Ixia TCL library; the Ixia methods can be called in python using this wrapper. The libray file
  with the wrappers can be found in lib/Ixia/IxPython.py
- fixed issue #20
- fixed issue #17
- fixed issue #13
- fixed issue #12
- fixed issue #9
- updated user guide
- reworked the code for central engine

WARNING: Installing this version might imply reconfiguring the framework; the older configuration files are not 100% compatible
         with this version of framework

31st May 2013

- bug fix for the order of test cases when test suites contain a mix of test cases and suites
- removed luxoft.com from the default email configuration
- enhance to provide timestamp for start and end of test file in EP_CLI log
- enhance to provide file attributes when browsing; provide sorting mechanism
- the logs for pre and post execution scripts can be CE log accesible using CE rest API
- added more internal variables available for saving into database:
	- $twister_ce_hostname
	- $twister_ep_hostname
	- $twister_ce_python_revision
	- $twister_ep_python_revision
	- $twister_rf_fname - resource file name
	- $twister_pf_fname - project file name
- added STEP mechanism for debugging
- updated documentation
- changed window for global params definition and description

17th May 2013 changes:

- fixed issue in Configuration->TestBeds about editing property names/deleting the property
  of a component under TestBed
- fixed issue about test execution order incorrect if test suite contains a mix of test cases and test suites
- fixed issue about editing regular expression in Configuration->PanicDetection
- updated user guide
- added an easy mechanism to update the description for plugins using a text file


29th April 2013 changes:
- bug fixes for GUI
- bug fixes for Sniffer plugin

04th April 2013 changes:
- GUI changes to associate a suite to a test bed; the test bed is defined in GUI Configuration section